--- a/target-xtensa/Makefile.objs
+++ b/target-xtensa/Makefile.objs
@@ -5,3 +5,4 @@ obj-y += core-fsf.o
 obj-$(CONFIG_SOFTMMU) += monitor.o
 obj-y += translate.o op_helper.o helper.o cpu.o
 obj-y += gdbstub.o
+obj-y += core-esp32.o
